feat:new endpoint to fetch and update school amdin
